@@ -302,7 +302,7 @@ PhotonVector SusyNtTools::getSignalPhotons(SusyNtObject* susyNt)
 /*--------------------------------------------------------------------------------*/
 // Get Met
 /*--------------------------------------------------------------------------------*/
-Susy::Met* SusyNtTools::getMet(SusyNtObject* susyNt, SusyNtSys sys, bool useNomPhiForMetSys)
+Susy::Met* SusyNtTools::getMet(SusyNtObject* susyNt, SusyNtSys sys)//, bool useNomPhiForMetSys)
 {
   // Right now not being clever. Could maybe make sys index correspond to 
   // index on the array.
@@ -314,16 +314,18 @@ Susy::Met* SusyNtTools::getMet(SusyNtObject* susyNt, SusyNtSys sys, bool useNomP
       met = &(metTmp->at(i));
     
       // NEW: For NtSys_SCALEST_UP/NtSys_SCALEST_DOWN use nominal phi
-      if(useNomPhiForMetSys && (sys == NtSys_SCALEST_UP || 
-				sys == NtSys_SCALEST_DN ||
-				sys == NtSys_RESOST)){
-	for(uint j=0; j<metTmp->size(); ++j){
-	  if(metTmp->at(j).sys == NtSys_NOM){
-	    met->phi = metTmp->at(j).phi;
-	    break;
-	  }
-        }
-      }
+      // Mar 1, 2013 -- No longer recommeneded, left over from HCP.
+      //if(useNomPhiForMetSys && (sys == NtSys_SCALEST_UP || 
+      //sys == NtSys_SCALEST_DN ||
+      //sys == NtSys_RESOST)){
+      //for(uint j=0; j<metTmp->size(); ++j){
+      //if(metTmp->at(j).sys == NtSys_NOM){
+      //met->phi = metTmp->at(j).phi;
+      //break;
+      //}
+      //}
+      //}
+
       return met;
     }
   }
