@@ -127,7 +127,7 @@ class SusyNtTools
                        uint nVtx, bool isMC, bool removeLeps=false);
   
     // Get the Met, for the appropriate systematic
-    Susy::Met* getMet(Susy::SusyNtObject* susyNt, SusyNtSys sys, bool useNomPhiForMetSys = true);
+    Susy::Met* getMet(Susy::SusyNtObject* susyNt, SusyNtSys sys);//, bool useNomPhiForMetSys = true);
 
     //
     // Methods for performing overlap removal
